[package]
name = "libosu"
version = "0.0.30"
authors = [
    "Michael Zhang <mail@mzhang.io>",
    "Nobbele <realnobbele@gmail.com>",
    "Ian <IanShehadeh2020@gmail.com>",
]
edition = "2021"

description = "General-purpose osu! library."
license = "MIT"
readme = "README.md"
keywords = ["osu"]
repository = "https://github.com/mzhang28/libosu.git"
documentation = "https://docs.rs/libosu/"

[profile.release]
lto = false

[dev-dependencies]
serde_json = "1.0.149"
difference = "2.0.0"
anyhow = "1.0.100"
proptest-derive = "0.6"
proptest = "1.9"

[dependencies]
bitflags = { version = "2.10.0", features = ["serde"] }
lazy_static = "1.5.0"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
ordered-float = { version = "5", features = ["serde"] }
regex = "1.12.2"
thiserror = "2"
derive_more = { version = "2", features = ["display"] }
log = "0.4.29"
byteorder = "1.5.0"
static_assertions = "1.1.0"

futures = { version = "0.3.31", optional = true }
http = { version = "1.4.0", optional = true }
hyper = { version = "1.8.1", features = ["http2", "client"], optional = true }
tokio = { version = "1.49.0", optional = true }
xz2 = { version = "0.1.7", optional = true }
lzma-rs = { version = "0.3.0", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.149", optional = true }
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"], default-features = false, optional = true }
anyhow = { version = "1.0.100", optional = true }
chrono = { version = "0.4.43", optional = true }
url = { version = "2.5.8", optional = true }
rosu-pp = { version = "3", optional = true }

[features]
default = []
examples = ["dep:anyhow", "serde", "dep:serde_json"]
apiv1 = [
    "dep:hyper", "dep:tokio", "dep:http", "dep:futures", "dep:reqwest",
    "dep:url", "serde", "dep:serde_json"
]
apiv2 = ["dep:reqwest", "serde", "dep:chrono", "chrono?/serde"]
replay-data = ["dep:lzma-rs"]
replay-data-xz2 = ["dep:xz2"]
pp-calc = ["dep:rosu-pp"]
experimental-diff-calc = []

# Used to check for clippy lints
# See: https://github.com/rust-lang/cargo/issues/8075#issuecomment-610259732
clippy = []

[package.metadata.cargo-all-features]
# skip_optional_dependencies = true
skip_feature_sets = [
    ["replay-data", "replay-data-xz2"],
]
allowlist = ["replay-data", "replay-data-xz2", "apiv1", "apiv2"]

[package.metadata.docs.rs]
features = ["apiv1", "apiv2", "replay-data", "pp-calc"]
rustdoc-args = ["--cfg", "docsrs"]
